# EVO2

./: .gitignore  CLAUDE.md  README.md  SUPABASE_SETUP.md  pyproject.toml
docs/: README.md  etl.md  setup.md
docs/archive/: historical_tasks.md
etl/: lobbying.py  lobbying_enhanced.py  lobbying_rest.py  lobbying_unified.py
supabase/: config.toml
supabase/migrations/: 20250707184812_create_lobby_staging_table.sql  20250707184812_create_registration_primary_export_table.sql
tasks/: todo.md
